MObile menu click

--- a/login.html
+++ b/login.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+
+        <header>
+            <div class="container">
+                <div class="logo">
+                    <img src="./images/logo.png" alt="Mockinterview-logo">
+                </div>
+
+                <div class="links">
+                    <ul >
+                        <li>Discover </li>
+                        <li>Mentors</li>
+                        <li>Learn More</li>
+                    </ul>
+                </div>
+
+                <div class="actions">
+                    <button class="btn loginBtn" id="login">Login</button>
+                    <button class="btn singupBtn">Signup</button>
+                </div>
+            </div>
+        </header>
+    </body>
 </html>
