call appy bind, spread and rest oopreators , prototype

--- a/wheather.html
+++ b/wheather.html
@@ -57,7 +57,7 @@
     </div>
 
     
-    <script src="./wheather.js"></script>
-
+    <!-- <script src="./wheather.js"></script> -->
+    <script src="script.js"></script>
 </body>
 </html>
