--- a/wheather.html
+++ b/wheather.html
@@ -58,6 +58,9 @@
 
     
     <!-- <script src="./wheather.js"></script> -->
-    <script src="script.js"></script>
+    <script src="script.js"  type="module"></script>
+    <script src="worker.js" type="module" ></script>
+
+
 </body>
 </html>
